--- a/index.html
+++ b/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <p class="human-score-label text-end">Human score:</p>
+    <p class="computer-score-label text-end">Computer score:</p>
+
     <div class="button-container">
-        <button class="rock-button">Rock</button>
-        <button class="paper-button">Paper</button>
-        <button class="scissors-button">Scissors</button>
-    </div>
-
-    <div class="human-score-label">
-        Human score:
-    </div>
-
-    <div class="computer-score-label">
-        Computer score:
+      <div class="rock-button">
+        <img
+          src="./assets/Microsoft-Fluentui-Emoji-Flat-Rock-Flat.512.png"
+          alt="Rock"
+          width="80"
+          height="80"
+        />
+      </div>
+      <div class="paper-button">
+        <img src="./assets/paper.png" alt="Paper" width="80" height="80" />
+      </div>
+      <div class="scissors-button">
+        <img
+          src="./assets/—Pngtree—vector scissor icon_4072403.png"
+          alt="Scissors"
+          width="80"
+          height="80"
+        />
+      </div>
     </div>
 
     <p class="current-text"></p>
-    <button type="button" class="btn btn-primary">Base class</button>
 
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
