--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
     />
   </head>
   <body class="body">
+  <div class="modal fade end-game-modal">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <h4 class="modal-text fw-bolder"></h4>
+      <div class="modal-header">
+        <h5 class="modal-title end-game-modal">Would you like yo play again?</h5>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-warning play-again-button">Play again</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
     <div class="game-container shadow-lg">
       <p class="human-score-label text-end">
         Human score: <span class="initial-score-human fw-bold">0</span>
